# PlaitsVst

./: CMakeLists.txt  EurorackCMakeLists.txt
eurorack_override/: overrides.inc
eurorack_override/plaits/: resources.cc
eurorack_override/plaits/dsp/: dsp.h
eurorack_override/plaits/dsp/fm/: algorithms.h
resource/: myplugineditor.uidesc  win32resource.aps
source/: EventQueue.h  MonoVoiceHandler.h  PlaitsWrapper.cpp  PlaitsWrapper.h  VstParameterInterpolator.h  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginparameters.h  mypluginprocessor.cpp  mypluginprocessor.h  version.h
